--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,13 @@ AllCops:
     - node_modules/**/*
     - tmp/*
     - Guardfile
+    - Gemfile
+    - config/puma.rb
+    - config/spring.rb
+    - config/initializers/devise.rb
+    - db/data.rb
+    - spec/rails_helper.rb
+
   DisplayCopNames: true
 
 # Missing magic comment # frozen_string_literal: true.
@@ -29,7 +36,10 @@ Style/NumericLiterals:
 
 Style/SymbolArray:
   Enabled: false
-  
+
+Style/Lambda:
+  Enabled: false
+
 Metrics/BlockLength:
   Exclude:
     - spec/**/*
