--- a/config/database.yml
+++ b/config/database.yml
@@ -1,16 +1,13 @@
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  hostname: postgres
+  encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: development
 
 test:
   <<: *default
-  database: db/test.sqlite3
-
-production:
-  <<: *default
-  database: db/production.sqlite3
+  database: test
