--- a/config/database.yml
+++ b/config/database.yml
@@ -1,14 +1,14 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  hostname: postgres
+  host: postgres
   user: postgres
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: development
+  database: my_blog_development
 
 test:
   <<: *default
-  database: test
+  database: my_blog_test
