--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: "3"
 services:
   app:
     build: .
-    command: "bundle exec rails server -b 0.0.0.0"
+    command: >
+      sh -c "rm -f tmp/pids/server.pid &&
+      bundle exec rails server -b 0.0.0.0"
     volumes:
       - .:/app
     ports:
