--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "setup": "docker-compose run app rake db:setup",
     "up": "docker-compose up",
     "build": "docker-compose build",
-    "spec": "docker-compose run app rspec"
+    "console": "docker-compose run app rails c",
+    "spec": "docker-compose run -e 'RAILS_ENV=test' app rspec"
   }
 }
