--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "docker-compose build",
     "console": "docker-compose run app rails c",
     "bundle": "docker-compose run app bundle install",
-    "spec": "docker-compose run -e 'RAILS_ENV=test' app rspec",
+    "spec": "docker-compose run -e 'RAILS_ENV=test' app bundle exec rspec",
     "app": "docker-compose run app"
   }
 }
